# tamgram

./: .gitignore  001_introduction.html  002_installation.html  003_initial_example.html  004_cryptographic_messages.html  005_processes.html  006_static_analysis.html  CHANGELOG.md  Containerfile  LICENSE  Makefile  README.md  bench_utils.py  benchmark.py  benchmark.sh  check-translation.sh  compile-examples.sh  compile_examples.py  crosscheck-benchmark.sh  debug_examples.py  display_benchmark.py  dune-project  index.html  make_tables.py  print.html  run.sh  start-container-selinx.sh  start-container.sh  tamgram.opam  tamgram.opam.locked  update-version-string.sh
benchmark-latest/: .gitignore  CSF18_XOR_CH07_table.tex  CSF18_XOR_CRxor_table.tex  CSF18_XOR_KCL07_table.tex  CSF18_XOR_LAK06_table.tex  (+11 more)
src/: add_builtins.ml  add_restrictions_while_loops.ml  add_start_rules.ml  add_state_facts.ml  binding.ml  binding.mli  builtin.ml  builtin_set.ml  cell_data_shape.ml  cell_data_shape_analysis.ml  cell_data_shape_set.ml  cell_lifetime.ml  cell_lifetime.mli  cell_lifetime_backward_scan.ml  cell_lifetime_check.ml  cell_usage_check.ml  clean_up_user_specified_cell_pattern_matches.ml  cli_utils.ml  compile_tg_cmd.ml  construct_proc_graphs.ml  debug_tg_cmd.ml  dune  dup_uninterpreted_fun_symbols_check.ml  error_msg.ml  expand_macro_apps.ml  fact_usage_check.ml  file_buffer.ml  file_buffer_store.ml  graph.ml  graph.mli  int_int_set.ml  lexical_ctx.ml  lexical_ctx.mli  lexical_ctx_analysis.ml  loc.ml  loop_check.ml  misc_utils.ml  missing_builtin_check.ml  modul_load.ml  name.ml  (+51 more)
(+1866 files in other folders)
