(executables
 (flags     (-w "+a-4-9-29-37-40-42-44-48-50-32-30-45-70@6@8"))
 (names tamgram tamgram_rewrite_dot)
 (public_names tamgram tamgram-rewrite-dot)
 (libraries cmdliner
            containers
            fmt
            ANSITerminal
            oseq
            )
 )

(ocamllex tg_lexer)

(menhir (modules tg_parser))
